--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,15 +31,13 @@ body {
 /* game area */
 
 #game-area {
-    margin-top: 10px;
     background-color: rgb(255, 255, 255, 30%);
-    box-sizing: border-box;
-    border-radius: 3rem;
-    width: 60%;
-    height: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1%;
+    width: 50%;
+    margin: auto;
+    top: 50%;
+    left: 50%;
+    box-shadow: 0px 10px 50px rgba(245, 241, 241, 0.514);
+
 }
 
 #game-area h1 {
