--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,4 +147,46 @@ body {
     width: 110px;
     height: 110px;
     }
+    .help .question {
+        font-size: 100%;
+    }
 }
+/*  rules */
+
+.help {
+    width: 50%;
+  }
+  
+  .help .question {
+    margin-left: 1%;
+    color: rgb(233, 77, 5);
+    cursor: pointer;
+    font-size: 200%;
+    position: fixed;
+    float: right;
+  }
+  
+  .help .rules {
+    width: 50%;
+    height: 0;
+    text-align: center;
+    position: absolute;
+    background: whitesmoke;
+    overflow: hidden;
+    transition: 1s;
+  }
+  
+  .help .rules {
+    margin: auto;
+  }
+
+  .help:hover .rules {
+    height: fit-content;
+  }
+  
+  .help .rules p {
+    color: rgb(3, 3, 3);
+    text-align: center;
+    text-shadow: 0.3px 0.3px rgb(233, 93, 93);
+}
+  
