--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,14 +114,14 @@ body {
     padding-top: 30px;
 }
 
-#score-player, #win {
+#score-player, #win-player {
     color: rgb(146, 255, 146);
     font-weight: bold;
     font-size: 1.8rem;
     text-shadow: 1px 1px rgba(255, 255, 255, 0.566);
 }
 
-#score-computer, #loose {
+#score-computer, #win-computer {
     color: rgb(246, 49, 49);
     font-weight: bold; 
     font-size: 1.8rem;
