New background path

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url(/assets/images/background.jpg);
+    background-image: url(../images/background.jpg);
     font-family: "Cinzel", sans-serif;
     text-align: center;
 }
